# MyUFSC

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitmodules  .semgrepignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TODO.md  components.json  google.txt  instrumentation.ts  myufsc.config.json  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  query.ts  query_programs.ts  tailwind.config.ts  test-db-schedule.ts  test-db.ts  test-db2.ts  test.ts  test2.ts  tsconfig.json  variables.env  verify_fix.ts
.claude/: settings.json
.github/: pull_request_template.md
.zap/: rules.tsv
ai-reading/: gemni.js  schema.js
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
components/: course-box.tsx  course-details-panel.tsx  course-stats.tsx  curriculum-visualizer.tsx  dependency-tree.tsx  details-panel.tsx  grid-visualizer.tsx  phase-header.tsx  progress-visualizer.tsx  search-popup.tsx  student-course-details-panel.tsx  theme-toggle.tsx  timetable.tsx  trash-drop-zone.tsx
config/: visualization.ts
data/: cs-degree.json  degree-programs.json  schedule.json  student.json
database/: .env.example  local-setup.ts  ready.ts
docs/: architecture.md  authentication-security.md  curriculum-system.md  data-loading-hooks.md  data-pipeline.md  database-layer.md  professor-rating-architecture-issues.md  professor-rating.md  schedule-timetable.md  state-management.md  transcript-import.md
hooks/: CheckAuth.ts  UseCurriculum.ts  UseSchedule.ts  useAppSetup.ts  useCourseMap.ts  useDashboardRef.ts  useDependencyGraph.ts  useEncryptedData.ts  useStableValue.ts
lib/: api.ts  course-drag.ts  crypto.ts  curriculum-parser.ts  data-extractor.py  db-user.ts  db.js  description-check.py  example.txt  output.json  prerequisites.ts  professors-client.ts  (+6 more)
matrufsc-scraper/: Cargo.toml
matrufsc-scraper/src/: 20243.json  20251.json  export.rs  main.rs  scrape.rs
scrapers/schedule/: Cargo.toml
scrapers/schedule/src/: export.rs  main.rs  parse.rs  scrape.rs
(+241 files in other folders)
